<resources>
    <string name="app_name">Project2</string>
    <string name="button_Login_text">Login</string>
    <string name="password_text">password</string>
    <string name="login_text">Login</string>
    <string name="username_text">username</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="cart">cart</string>
    <string name="admin_options">admin options</string>
    <string name="register_button_text">Register</string>
    <string name="items_text">Items</string>
    <string name="search_text">Search</string>
    <string name="add_to_cart_button_text">Add To Cart</string>
    <string name="current_inventory">Current Inventory</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_value">Enter Value</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="add_item">add item</string>
    <string name="cart_text">Cart</string>
    <string name="purchase_text">Purchase</string>
    <string name="remove_text">Remove</string>
</resources>