<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/EditTextMenuName"
        android:layout_width="204dp"
        android:layout_height="109dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/menu"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="124dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:text="@string/order"
        app:layout_constraintEnd_toStartOf="@+id/buttonCart"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextMenuName" />

    <Button
        android:id="@+id/buttonCart"
        android:layout_width="123dp"
        android:layout_height="116dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="36dp"
        android:text="@string/cart"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdmin"
        app:layout_constraintTop_toBottomOf="@+id/EditTextMenuName" />

    <Button
        android:id="@+id/buttonAdmin"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="36dp"
        android:text="@string/admin_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextMenuName"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>